charts/huntarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huntarr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: huntarr
  template:
    metadata:
      labels:
        app: huntarr
    spec:
      containers:
      - name: huntarr
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            memory: 1Gi
        image: huntarr/plexguide:latest
        imagePullPolicy: Always
        # ports:
        # - containerPort: 9705
        volumeMounts:
        - name: huntarr-config
          mountPath: /config
      volumes:
        - name: huntarr-config
          persistentVolumeClaim:
            claimName: huntarr-config-pvc
