charts/huntarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntarr
  labels:
    app: huntarr
    kubernetes.io/name: huntarr
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  type: ClusterIP
  selector:
    app: huntarr
  ports:
  - name: http
    port: 80
    targetPort: 9705
    protocol: TCP
